--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 header {
     background: #333;
     color: white;
-    padding: 15px 10%;
+    padding: 0px 10%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -20,6 +20,7 @@ header {
 
 header h1 {
     font-size: 35px;
+    margin-left: -118px;
 }
 
 header h1 span {
@@ -28,7 +29,8 @@ header h1 span {
 
 /* Navigation Bar */
 nav {
-    width: 100%;
+    width: 150%;
+    margin-left: -130px;
     margin-top: 10px;
     background: #ccc; /* Grey background */
     padding: 10px 0;
@@ -85,7 +87,7 @@ article {
 }
 
 .content h2 {
-    font-size: 18px;
+    font-size: 25px;
 }
 
 .content p {
@@ -110,6 +112,8 @@ aside {
     background: #777;
     padding: 15px;
     margin-left: 15px;
+    margin-top: -20px;
+    margin-bottom: -20px;
 }
 
 aside h3 {
